{{$NEXT}}
    - Support for reloads and login via AuthTkt

0.001     2012-01-11 00:14:38 Europe/Madrid
    - Initial release
    - Support for Status and Downtimes